@@ -61,20 +61,11 @@ if {[string equal $tcl_platform(platform) "windows"]} {
 # find a CD-ROM so we can test read-only filesystems.
 
 set cdrom {}
-set nodrive x:
-foreach p {d e f g h i j k l m n o p q r s t u v w x y z} {
-    set name ${p}:/dummy~~.fil
-    if [catch {set fd [open $name w]}] {
-	set err [lindex $errorCode 1]
-        if {$cdrom == "" && $err == "EACCES"} {
-	    set cdrom ${p}:
-	}
-	if {$err == "ENOENT"} {
-	    set nodrive ${p}:
-	}
-    } else {
-        close $fd
-	file delete $name
+if { [info commands ::testvolumetype] ne {} } {
+    foreach p {d e f g h i j k l m n o p q r s t u v w x y z} {
+        if { ! [catch { testvolumetype ${p}: } result] && $result eq {CDFS} } {
+            set cdrom ${p}:
+        }
     }
 }
 
