@@ -1,3 +1,10 @@
+2004-05-25  Kevin Kenny  <kennykb@acm.org>
+
+	* tests/winFCmd.test: Correct test for the presence of a CD-ROM so
+	                      that it doesn't misdetect some other sort
+	                      of filesystem with a write-protected root as
+	                      being a CD-ROM drive. [Bug 918267]
+	
 2004-05-25  Don Porter  <dgp@users.sourceforge.net>
 
 	* tests/http.test:	Clear away the custom [bgerror] when done.
